tests/NormalTests/paczka2/big_fuzzy/41192601.err
Error in line 1: bBz S620 21,1
Error in line 11: xN6EjdYrw7 S620 55,6
Error in line 21: slztCF S620 69,4
Error in line 18: S620 S620 75,0
Error in line 28: 2gYitBvC6Zn A375 96,4
Error in line 33: 2gYitBvC6Zn A24 57,9
Error in line 43: VMGB A375 60,8
Error in line 53: VMGB S620 49,8
Error in line 66: slztCF A327 50,84
Error in line 49: slztCF A375 170,2
Error in line 68: 2gYitBvC6Zn A327 26,8
Error in line 77: 2gYitBvC6Zn A375 31,3
Error in line 81: 2gYitBvC6Zn A24 46,0
Error in line 94: YbPC3MgkKp A24 65,3
Error in line 91: xN6EjdYrw7 A24 6,6
Error in line 95: YbPC3MgkKp A327 2,6
Error in line 96: S620 A327 10,0
Error in line 103: 2gYitBvC6Zn S620 -1,7
Error in line 98: YbPC3MgkKp A24 52,0
Error in line 108: 2gYitBvC6Zn S620 138,5
Error in line 111: bBz A327 44,3
Error in line 101: S620 S620 26,4
Error in line 115: YbPC3MgkKp A24 50,7
Error in line 126: slztCF A327 64,8
Error in line 130: slztCF A24 52,7
Error in line 131: S620 S620 62,8
Error in line 127: xN6EjdYrw7 A327 19,8
Error in line 142: xN6EjdYrw7 S620 -4,5
Error in line 139: S620 S620 20,9
Error in line 110: 2gYitBvC6Zn A375 11,5
Error in line 144: S620 A24 58,2
Error in line 151: YbPC3MgkKp A375 74,9
Error in line 146: S620 S620 13,3
Error in line 138: xN6EjdYrw7 S620 69,8
Error in line 180: bBz A327 0,2
Error in line 165: YbPC3MgkKp S620 61,5
Error in line 190: 2gYitBvC6Zn A375 54,0
Error in line 194: slztCF A24 56,9
Error in line 195: slztCF A375 78,7
Error in line 199: 2gYitBvC6Zn A24 66,0
Error in line 189: S620 S620 14,4
Error in line 212: bBz A375 5,6
Error in line 214: bBz A24 71,9
Error in line 218: YbPC3MgkKp A375 52,2
Error in line 228: bBz S620 96,8
Error in line 231: bBz A375 25,6
Error in line 234: VMGB A24 75,48
Error in line 230: YbPC3MgkKp S620 263,4
Error in line 237: YbPC3MgkKp A375 72,1
Error in line 236: VMGB A24 138,7
Error in line 246: 2gYitBvC6Zn A327 83,7
Error in line 247: YbPC3MgkKp A24 228,7
